--- a/src/app/components/Carte/style.css
+++ b/src/app/components/Carte/style.css
@@ -1,8 +1,23 @@
-.card{
-
+.Card{
+    width: 15vw;
 }
 
 .img_card{
     width: 100%;
     height: 100%;
+    object-fit: contain;
+}
+
+
+.div_img_card{
+    width: 43%;
+
+
+}
+
+
+.box_card_img{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10%;
 }
